package com.ylkget.pattern.factory.absfactory.order;

import com.ylkget.pattern.factory.absfactory.pizza.Pizza;

/**
 * <p>
 * $
 * </p>
 *
 * @author joe 2021-03-27 17:05
 */
//一个抽象工厂模式的抽象层(接口)
public interface AbsFactory {
    //让下面的工厂子类来 具体实现
    Pizza createPizza(String orderType);
}
