@startuml
'https://plantuml.com/class-diagram

abstract class Pizza {
    #String name
    +{abstract} void prepare()
    +void bake()
    +void cut()
    +void box()
    +void setName(String name)
}

class BJCheesePizza extends Pizza {
    +void prepare()
}

class BJPepperPizza extends Pizza {
    +void prepare()
}

class LDCheesePizza extends Pizza {
    +void prepare()
}

class LDPepperPizza extends Pizza {
    +void prepare()
}

interface AbsFactory {
    +Pizza createPizza(String orderType)
}

class BJFactory implements AbsFactory {
    +Pizza createPizza(String orderType)
}

class LDFactory implements AbsFactory {
    +Pizza createPizza(String orderType)
}

BJFactory ..> BJCheesePizza
BJFactory ..> BJPepperPizza : 依赖
LDFactory ..> LDCheesePizza
LDFactory ..> LDPepperPizza

class OrderPizza {
    -AbsFactory factory
    +OrderPizza(AbsFactory factory)
}

class OrderPizzaMore {
    -AbsFactory factory
    +OrderPizza(AbsFactory factory)
}

OrderPizza o-- AbsFactory
OrderPizzaMore o-- AbsFactory

@enduml